PPAPI - All models are released
